[gd_scene load_steps=2 format=3 uid="uid://lugntstv62fr"]

[ext_resource type="Script" path="res://scenes/test.gd" id="1_8jpwa"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8jpwa")

[node name="cMsg" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 208.0
offset_right = 1156.0
offset_bottom = 43.0
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="vbox" type="VBoxContainer" parent="cMsg"]
layout_mode = 2

[node name="txtMsg" type="LineEdit" parent="cMsg/vbox"]
layout_mode = 2

[node name="btSend" type="Button" parent="cMsg/vbox"]
layout_mode = 2
size_flags_horizontal = 8
text = "Send"

[node name="txtRcv" type="LineEdit" parent="cMsg/vbox"]
layout_mode = 2

[node name="lblStatus" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0

[connection signal="pressed" from="cMsg/vbox/btSend" to="." method="_on_btSend_pressed"]
